--- a/IPMS_KLK/Views/MainMenuOptions/ReceiptReprint.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/ReceiptReprint.xaml
@@ -6,8 +6,7 @@
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ffffff" Offset="0.1" />
-            <GradientStop Color="#ffffff" Offset="1" />
-            <!--<GradientStop Color="#E2BEF1" Offset="1.0" />-->
+            <GradientStop Color="#ffffff" Offset="1" />            
         </LinearGradientBrush>
     </ContentPage.Background>
 
@@ -79,7 +78,7 @@
                     </Frame>
             </StackLayout>
 
-            <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
+            <Image Style="{StaticResource klk_logo}"/>
 
         </StackLayout>
     </ContentPage.Content>
