--- a/IPMS_KLK/Views/MainMenuOptions/TaskInspectionMenuOptions/TaskInspectionHarvestedDefectivePalm.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/TaskInspectionMenuOptions/TaskInspectionHarvestedDefectivePalm.xaml
@@ -13,46 +13,7 @@
 
 
     <ContentPage.Resources>
-        <ResourceDictionary>
-            <Style x:Key="labelBaseStyle" TargetType="Button">
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="Padding" Value="10,10,10,10"/>
-                <Setter Property="Margin" Value="0"/>
-                <Setter Property="CornerRadius" Value="20"/>
-                <Setter Property="TextTransform" Value="None"/>
-                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
-                <Setter Property="HorizontalOptions" Value="Fill"/>
-                <Setter Property="FontFamily" Value="sfBlack"/>
-                <Setter Property="TextColor" Value="Black"/>
-            </Style>
-
-            <Style x:Key="reset_btn" TargetType="Button" BasedOn="{StaticResource labelBaseStyle}">
-                <Setter Property="BackgroundColor" Value="#ff3030"/>
-            </Style>
-
-            <Style x:Key="bottom_btn" TargetType="Button" BasedOn="{StaticResource labelBaseStyle}">
-                <Setter Property="BackgroundColor" Value="#ff6347"/>
-                <Setter Property="Margin" Value="0,0,0,2"/>
-
-            </Style>
-
-            <Style x:Key="label_inside_button" TargetType="Label">
-                <Setter Property="FontFamily" Value="sfBlack"/>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="HorizontalTextAlignment" Value="Start"/>
-                <Setter Property="VerticalTextAlignment" Value="Start"/>
-                <Setter Property="Margin" Value="10,10,0,0"/>
-                <Setter Property="TextColor" Value="Black"/>
-            </Style>
-
-            <Style x:Key="label_for_OC" TargetType="Label">
-                <Setter Property="FontSize" Value="14"/>
-                <Setter Property="FontFamily" Value="sfBlack"/>
-                <Setter Property="TextColor" Value="Black"/>
-                <Setter Property="VerticalTextAlignment" Value="Center"/>
-                <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
-            </Style>
-
+        <ResourceDictionary>           
             <Style TargetType="Label">
                 <Setter Property="FontSize" Value="14"/>
                 <Setter Property="TextColor" Value="Black"/>
@@ -60,20 +21,6 @@
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
                 <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
                 <Setter Property="FontFamily" Value="sfBlack"/>
-            </Style>
-
-            <Style x:Key="label_for_title" TargetType="Label">
-                <Setter Property="Margin" Value="0"/>
-                <Setter Property="Padding" Value="0"/>
-                <Setter Property="TextColor" Value="Black"/>
-                <Setter Property="HorizontalTextAlignment" Value="Center"/>
-                <Setter Property="FontFamily" Value="sfBlack"/>
-            </Style>
-
-            <Style TargetType="Frame" x:Key="button_shadow_frame">
-                <Setter Property="BackgroundColor" Value="DarkGray"/>
-                <Setter Property="Padding" Value="0"/>
-                <Setter Property="CornerRadius" Value="20"/>
             </Style>
 
             <Style TargetType="Entry">
@@ -88,58 +35,28 @@
                 <Setter Property="Margin" Value="5,5,0,0"/>
                 <Setter Property="WidthRequest" Value="100"/>
             </Style>
-
-            <Style TargetType="Frame">
-                <Setter Property="BackgroundColor" Value="White"/>
-                <Setter Property="BorderColor" Value="DarkGray"/>
-                <Setter Property="CornerRadius" Value="10"/>
-                <Setter Property="HasShadow" Value="True"/>
-                <Setter Property="Padding" Value="0"/>
-                <Setter Property="Margin" Value="10,10,10,10"/>
-            </Style>
-
-            <Style TargetType="ImageButton">
-                <Setter Property="Source" Value="scan.png"/>
-                <Setter Property="BackgroundColor" Value="Transparent"/>
-                <Setter Property="CornerRadius" Value="20"/>
-                <Setter Property="Margin" Value="0,5,0,5"/>
-                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
-                <Setter Property="HeightRequest" Value="50"/>
-                <Setter Property="WidthRequest" Value="50"/>
-            </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <ContentPage.Content>
         <StackLayout Margin="0,10,0,0" x:Name="task_inspection_StackLayout">
             <Grid Margin="0" RowSpacing="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="70"/>
-                    <RowDefinition Height="70"/>
-
-                </Grid.RowDefinitions>
-
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Text="HARVESTED PALM WITH" FontSize="20" Style="{StaticResource label_for_title}" Grid.Row="0" Grid.Column="1" VerticalOptions="End"/>
-                <Label Text="DEFECTIVE CIRCLE" FontSize="25" Style="{StaticResource label_for_title}" Grid.Row="1" Grid.Column="1" VerticalOptions="Start"/>
+                <StackLayout Grid.Column="1" Grid.Row="0"  VerticalOptions="CenterAndExpand">
+                    <Label Text="HARVESTED PALM WITH" FontSize="20" Style="{StaticResource label_for_title}"/>
+                    <Label Text="DEFECTIVE CIRCLE" FontSize="25" Style="{StaticResource label_for_title}"/>
+                </StackLayout>
 
-
-                <lottie:AnimationView Animation="Resources.construction.json" x:Name="task_Anim"
-                         AnimationSource="EmbeddedResource"
-                         RepeatMode="Infinite"
-                         AutoPlay="True"
-                         HeightRequest="150"
-                         VerticalOptions="CenterAndExpand"
-                         Margin="0,0,0,0" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"/>
+                <lottie:AnimationView Style="{StaticResource task_inspection_animation}"/>
 
             </Grid>
 
-            <Frame >
-                <Label Text="OC :135-LADANG SERAPOH" Style="{StaticResource label_for_OC}" Margin="20,0,20,0"/>
+            <Frame Style="{StaticResource frame_for_OC}">
+                <Label Text="OC :135-LADANG SERAPOH" Style="{StaticResource label_for_OC}" />
             </Frame>
 
             <Grid Margin="10,0,10,0">
@@ -192,10 +109,9 @@
                                 Text="New Task"/>
                     </Frame>
                 </Grid>
-                <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" Margin="0,0,0,10"/>
+                <Image Style="{StaticResource klk_logo}"/>
             </StackLayout>
 
         </StackLayout>
-
     </ContentPage.Content>
 </ContentPage>
